--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
         </div>
     </div>
     <button onclick="scrollToTop()" class="top-button">^</button>
-    <script src="https://raw.githubusercontent.com/ziasyed2000/Job-Board/main/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
